--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -25,4 +25,5 @@ jobs:
           echo "GITHUB_SHA is $GITHUB_SHA" >> /tmp/test2.txt
           echo "GITHUB_RUN_ID is $GITHUB_RUN_ID" >> /tmp/test2.txt
           echo "GITHUB_ENV is $GITHUB_ENV" >> /tmp/test2.txt
+          echo "$PWD" >> /tmp/test2.txt
        
