--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -10,14 +10,14 @@ jobs:
        - uses: actions/checkout@v2  
        - run: |
            /home/github/apache-maven/bin/mvn clean install
-  tomcat deployment:
+  tomcat-deployment:
     runs-on: [self-hosted]
     needs: build
     steps:
        - name: Run a multi-line script
          run: |
           sh /home/github/deployscripts/tomdeploy.sh
-  wildfly deployment:
+  wildfly-deployment:
     runs-on: [self-hosted]
     needs: build
     steps:
