--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -22,5 +22,6 @@ jobs:
     needs: build
     steps:
       - name: Run a multi-line script
+        env: JBOSS_HOME: ${{ secrets.DEPLOY }}
         run: |
           sh /home/github/deployscripts/wilddeploy.sh
