adding the deployment code #5

--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: [self-hosted]
     needs: build
     steps:
-      - name: Run a multi-line script
+      - name: Hello world action
         env: JBOSS_HOME: ${{ secrets.DEPLOY }}
+      - name: Run a multi-line script
         run: |
           sh /home/github/deployscripts/wilddeploy.sh
