--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -4,7 +4,7 @@ on:
     branches: [ DEV ]
   workflow_dispatch:
 env:
-   - deploy_server: PROD
+    deploy_server: PROD
 jobs:
    test:
       runs-on: [self-hosted]
