--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -4,14 +4,15 @@ on:
     branches: 
   workflow_dispatch:
 env:
-    deploy_server: PROD
+    deploy_server: QA
     war_filename: sample-project-0.0.1-SNAPSHOT.war
+    git_sha: ${{ GITHUB_SHA }}
 jobs:
    test:
       runs-on: self-hosted
       steps:
        - name: tst run
          run: |
-             ansible-playbook -i /opt/ansible-playbook/inventory.txt /opt/ansible-playbook/sync.yaml
+             ansible-playbook -i /opt/ansible-playbook/inventory.txt /opt/ansible-playbook/wildfly-deploy.yaml
          env:
             variable: $deploy_server
