clone build and copy local

--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -9,7 +9,12 @@ env:
     war_filename: sample-project-0.0.1-SNAPSHOT.war
     #   git_sha: ${{ GITHUB_SHA }}
 jobs:
-   clone:
+   Clone_Build:
       runs-on: [self-hosted]
       steps:
-       - uses: actions/checkout@v3
+       - name: Checkout
+         uses: actions/checkout@v3
+       - name: Build
+         run: mvn clean install
+       - name: Copy
+         run: mkdir /opt/chekouts/$GITHUB_REPOSITORY/$GITHUB_SHA/ | cp -apr *.war /opt/chekouts/$GITHUB_REPOSITORY/$GITHUB_SHA/
