--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -13,4 +13,4 @@ jobs:
       runs-on: [self-hosted]
       steps:
        - name: Build
-         run: echo $github.event
+         run: echo ${{ github.event }}
