--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -13,4 +13,7 @@ jobs:
       runs-on: [self-hosted]
       steps:
        - name: Build
-         run: echo ${{ github.event }}
+         env:
+           GITHUB_CONTEXT: ${{ toJson(github.event) }}
+         run: |
+             echo "$GITHUB_CONTEXT"
