--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -17,3 +17,4 @@ jobs:
            GITHUB_CONTEXT: ${{ toJson(github.event) }}
          run: |
              echo "$GITHUB_CONTEXT"
+       - run: echo "${{ github.event.repository.name }}"
