--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -14,5 +14,5 @@ jobs:
       runs-on: [self-hosted]
       steps:
        - name: Build
-         run: echo "$env.git_sha"
-       - run: echo "$env.repo_name"
+         run: echo "${{ env.git_sha }}"
+       - run: echo "${{ env.repo_name }}"
