--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -17,6 +17,7 @@ jobs:
          uses: actions/checkout@v3
    Build:
        runs-on: [self-hosted]
+       needs: Clone
        steps:
        - name: Build
          run: mvn -f $GITHUB_WORKSPACE/pom.xml clean install    
