--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -20,4 +20,7 @@ jobs:
        steps:
        - run: mvn clean install
        - run: sudo mkdir -p /opt/artifacts/${{ env.repo_name }}/$GITHUB_SHA
-       - run: cp -pr target/$war_filename /opt/artifacts/${{ env.repo_name }}/$GITHUB_SHA/
+       - run: ls -lht target/$war_filename 
+         
+         #cp -pr target/$war_filename /opt/artifacts/${{ env.repo_name }}/$GITHUB_SHA
+
