--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -27,3 +27,8 @@ jobs:
        needs: Build_LocalCopy
        steps: 
          - run: ansible-playbook -i /opt/ansible-playbook/inventory.txt  /opt/ansible-playbook/copy-aritfact.yaml --extra-vars "server_group=${{ env.server_group }} war_name=${{ env.war_filename }} github_sha=$GITHUB_SHA repo_name=${{ env.repo_name }}"
+   Deploy:
+       runs-on: [self-hosted]
+       needs: Build_LocalCopy
+       steps:
+          - run: ansible-playbook -i /opt/ansible-playbook/inventory.txt  /opt/ansible-playbook/wildfly-deploy.yaml --extra-vars "server_group=QA war_name=${{ env.war_filename }} github_sha=$GITHUB_SHA deployment_dir=/opt/deployment/$(date +%Y)/$(date +%^b)/$(date +%e)"
