--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -12,6 +12,7 @@ jobs:
    Clone:
       runs-on: [self-hosted]
       steps:
+       - run: echo "Github SHA for this deployment is: $GITHUB_SHA"
        - name: Clone
          uses: actions/checkout@v3
    Build_LocalCopy:
