wildfly with 2 Nodes

--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -14,11 +14,11 @@ jobs:
       steps:
        - name: Clone
          uses: actions/checkout@v3
+       - run: echo Github SHA for this deployment is: $GITHUB_SHA  
    Build_LocalCopy:
        runs-on: [self-hosted]
        needs: Clone
        steps:
-       - run: echo $GITHUB_SHA
        - run: mvn clean install
        - run: mkdir -p /opt/artifacts/${{ env.repo_name }}/$GITHUB_SHA
        - run: ls -lht target/$war_filename 
