--- a/.github/workflows/java-deploy.yml
+++ b/.github/workflows/java-deploy.yml
@@ -14,7 +14,8 @@ jobs:
       steps:
        - name: Clone
          uses: actions/checkout@v3
-       - run: echo Github SHA for this deployment is: $GITHUB_SHA  
+       - run: |
+              echo "Github SHA for this deployment is: $GITHUB_SHA"
    Build_LocalCopy:
        runs-on: [self-hosted]
        needs: Clone
